--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+"git add <Dev-challenges>..."
+	404-not-found/
+	Checkout-page/
+	Edie-homepage/
+	Interior-consultant/
+	Recipe-page/
+	my-team-page/
